--- a/basics.html
+++ b/basics.html
@@ -37,58 +37,155 @@
 			  </div>
 			</nav>
 		</div>
-		<div class="row slide-show-row">
-			<div class="slide-show slide-show-1">
-				<h1>Slideshow</h1>
-			</div>
-		</div>
 		<div class="row">
 			<div class="container">
 				<div class="outside col-lg-12">
-					<div class="panel main-basic main-panel">
-						<div class="row">
-							<h2 class="main-title">How to Quidditch</h2>
-						</div>
-						<div class="row">
-							<div class="">
+					<div class="row">
+						<h1 class="main-title main-title-basic">How to Quidditch</h1>
+					</div>
+					<div class="row">
+						<div class="col-md-7">
+							<div class="panel basic-panel main-basic main-panel">
 								<h3>Overview</h3>
-								<p>Each team has 7 players playing at a time, and their objective is to score more points than their opponent before the "snitch" is pulled, which ultimately ends the game. To score, one of the four "Quaffle Players" (Chasers &amp; Keepers) needs to put the quaffle through any of their opponents' three hoops, doing so will earn their team 10 points. Each team's two "Bludger Players" (Beaters) will use any of the three bludgers to "beat" their opponents forcing them to tag their own hoops before returning to play. The "seeker" who pulls "snitch" not only earns their team 30 points, but they also end the game.</p>
-							</div>
-						<div class="row">
-							<div>
-								<h3>Positions</h3>
-
+								<p>Each team has 7 broom-riding players playing at a time, and their objective is to score more points than their opponent before the "snitch" is pulled, which ultimately ends the game. To score, one of the four "Quaffle Players" (Chasers &amp; Keepers) needs to put the quaffle through any of their opponents' three hoops, doing so will earn their team 10 points. Each team's two "Bludger Players" (Beaters) will use any of the three bludgers to "beat" their opponents forcing them to remove their broom and tag their own hoops before returning to play. The "seeker" who pulls "snitch" not only earns their team 30 points, but they also end the game.</p>
 							</div>
 						</div>
-				<div class="row">
-					<div class="basic-sub-col col-md-12">
-						<div class="panel basic-panel">
-							<div class="panel-heading">
-								<h3 class="basic-panel-title">Overview<h3>
-							</div>
-							<div class="panel-body">
-								<div clas ="row panel-row">
-									<div class="col-md-5 proj-col-left">
-										<a href="projects/train-schedule/index.html" target="_blank">
-											<img src="assets/images/random5.jpg" alt="Train-Scheduler" class="project-img project-img-left" id="train-scheduler"/>
-										</a>
-									</div>
-									<div class="col-md-7 proj-col-right">
-										<div class="row">
-											<h5 class="proj-mini-title">Summary:</h5>
-											<p>An interactive scheduler for calculating repeating train arrivals with the use of Moment.JS and Google's Firebase Database</p>
+						<div class="col-md-5">
+							<iframe width="420" height="315" src="https://www.youtube.com/embed/BKSoi96X6fA">
+>
+							</iframe>
+						</div>
+					</div>
+					<div class="row">
+						<div>
+							<h3>Positions</h3>
+						</div>
+					</div>
+					<div class="row">
+						<div class="basic-sub-col col-md-6">
+							<div class="panel basic-panel">
+								<div class="panel-heading">
+									<h3 class="basic-panel-title">Chaser</h3>
+								</div>
+								<div class="panel-body">
+									<div clas ="row panel-row">
+										<div class="col-md-5 proj-col-left">
+											<img src="assets/images/chaser.jpg" alt="Texas_Chaser" class="position-img position-img-left" id="chaser-img"/>
 										</div>
-										<div class="row">
-											<h5 class="proj-mini-title">Links:</h5>
-											<div class="col-md-6 proj-link-col">
-												<a href="projects/train-schedule/index.html" target="_blank" class="proj-link">
-												<p>Page Link</p>
-											</a>
+										<div class="col-md-7 proj-col-right">
+											<div class="row">
+												<h4 class="proj-mini-title">Position Summary:</h4>
+												<ul>
+													<li><strong>Headband:</strong>  White</li>
+													<li><strong>Ball Type:</strong> Quaffle</li>
+													<li><strong>Summary:</strong> The keeper is very similar to a chaser, but they are responsible for starting play after a scoring drive. Keepers are also allowed to reach through their own hoops to block opposing shots.</li>
+												</ul>
 											</div>
-											<div class="col-md-6 proj-link-col">
-												<a href="https://github.com/paden-pace/train-schedule" target="_blank" class="proj-link">
-												<p>Git Hub Repo</p>
-											</a>
+											<div class="row">
+												<h5 class="proj-mini-title">Links:</h5>
+												<div class="col-md-6 proj-link-col">
+													<a href="projects/train-schedule/index.html" target="_blank" class="proj-link">
+													<p>Page Link</p>
+												</a>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="basic-sub-col col-md-6">
+							<div class="panel basic-panel">
+								<div class="panel-heading">
+									<h3 class="basic-panel-title">Keeper</h3>
+								</div>
+								<div class="panel-body">
+									<div clas ="row panel-row">
+										<div class="col-md-7 proj-col-left">
+											<div class="row">
+												<h4 class="proj-mini-title">Position Summary:</h4>
+												<ul>
+													<li><strong>Headband:</strong>  Green</li>
+													<li><strong>Ball Type:</strong> Quaffle</li>
+													<li><strong>Summary:</strong> The keeper is very similar to a chaser, but they are responsible for starting play after a scoring drive. Keepers are also allowed to reach through their own hoops to block opposing shots.</li>
+												</ul>
+											</div>
+											<div class="row">
+												<h5 class="proj-mini-title">Links:</h5>
+												<div class="col-md-6 proj-link-col">
+													<a href="projects/train-schedule/index.html" target="_blank" class="proj-link">
+													<p>Page Link</p>
+												</a>
+												</div>
+											</div>
+										</div>
+										<div class="col-md-5 proj-col-right">
+											<img src="assets/images/keeper.jpg" alt="Texas_Keeper" class="position-img position-img-left" id="keeper-img"/>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="basic-sub-col col-md-6">
+							<div class="panel basic-panel">
+								<div class="panel-heading">
+									<h3 class="basic-panel-title">Seeker</h3>
+								</div>
+								<div class="panel-body">
+									<div clas ="row panel-row">
+										<div class="col-md-7 proj-col-left">
+											<div class="row">
+												<h4 class="proj-mini-title">Position Summary:</h4>
+												<ul>
+													<li><strong>Headband:</strong>  Yellow</li>
+													<li><strong>Ball Type:</strong> Snitch</li>
+													<li><strong>Summary:</strong> The keeper is very similar to a chaser, but they are responsible for starting play after a scoring drive. Keepers are also allowed to reach through their own hoops to block opposing shots.</li>
+												</ul>
+											</div>
+											<div class="row">
+												<h5 class="proj-mini-title">Links:</h5>
+												<div class="col-md-6 proj-link-col">
+													<a href="projects/train-schedule/index.html" target="_blank" class="proj-link">
+													<p>Page Link</p>
+												</a>
+												</div>
+											</div>
+										</div>
+										<div class="col-md-5 proj-col-right">
+											<img src="assets/images/seeker.jpg" alt="Texas_Seeker" class="position-img position-img-left" id="seeker-img"/>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="basic-sub-col col-md-6">
+							<div class="panel basic-panel">
+								<div class="panel-heading">
+									<h3 class="basic-panel-title">Beater</h3>
+								</div>
+								<div class="panel-body">
+									<div clas ="row panel-row">
+										<div class="col-md-5 proj-col-left">
+											<img src="assets/images/beater.png" alt="Texas_Beater" class="position-img position-img-left" id="beater-img"/>
+										</div>
+										<div class="col-md-7 proj-col-right">
+											<div class="row">
+												<h4 class="proj-mini-title">Position Summary:</h4>
+												<ul>
+													<li><strong>Headband:</strong>  Black</li>
+													<li><strong>Ball Type:</strong> Bludger</li>
+													<li><strong>Summary:</strong> The keeper is very similar to a chaser, but they are responsible for starting play after a scoring drive. Keepers are also allowed to reach through their own hoops to block opposing shots.</li>
+												</ul>
+											</div>
+											<div class="row">
+												<h5 class="proj-mini-title">Links:</h5>
+												<div class="col-md-6 proj-link-col">
+													<a href="projects/train-schedule/index.html" target="_blank" class="proj-link">
+													<p>Page Link</p>
+												</a>
+												</div>
 											</div>
 										</div>
 									</div>
@@ -96,26 +193,22 @@
 							</div>
 						</div>
 					</div>
-				</div>
-
-
-<!-- Keepers, Seekers, Chasers and Beaters ​
-6 players on the field on each team at a time
-7 players each when Seekers are released.​
-3 balls 
-Quaffles, Bludgers and the Snitch​​
-Teams get 10 points for scoring and 30 points for catching the snitch.
-Game play goes until 18 minutes. After that, seekers and the snitch are released and the game ends when one seeker pulls the snitch.
-​Players must play with a broom between their legs at all times! -->
+					<div class="row">
+						<div class="col-lg-12">
+							<div class="panel basic-panel FAQ">
+								<h2>FAQs</h2>
+								<h3>How does the snitch work?​​​​</h3>
+								 	<p>The snitch is a 3rd party player that has no affiliation with either team playing. The snitch is released after 17 minutes of game play and waits for seekers to be released at 18 minutes. The snitch does not have a broom and can push, throw, tackle, etc. any seeker and can use both hands to do so. The snitch has a tennis ball in a pouch attached to the back of his/her shorts and tries to keep the seekers from catching the tennis ball. </p>
+								​
+								<h3>If you score in different hoops does it count as different points?</h3>
+								 	<p>Nope! Although the three hoops on each end of the pitch are of varying heights, you only get 10 points for scoring regardless of which hoop you score through. You can score behind or in front of the hoops and scorers are allowed to either throw the ball or just stick their hand through the hoop. </p>
+								​
+								<h3>Do you actually fly?</h3>
+									<p>Unfortunately no, but that certainly doesn't keep us from thinking we can.</p>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</div>
-		<div class="row slide-show-row">
-			<div class="slide-show slide-show-2">
-				<h1>Slideshow</h1>
 			</div>
 		</div>
 		<div class="footer row">
