change of tab text and update of basics

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 	<head>
 		<meta charset="utf-8">
-		<title>Paden Pace About</title>
+		<title>Texas Quiditch</title>
 
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
