--- a/more.html
+++ b/more.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 	<head>
 		<meta charset="utf-8">
-		<title>Texas Quidditch More</title>
+		<title>Texas Quidditch</title>
 
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
