--- a/basics.html
+++ b/basics.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 	<head>
 		<meta charset="utf-8">
-		<title>Paden Pace About</title>
+		<title>Texas Quiditch</title>
 
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
@@ -11,6 +11,9 @@
 
 		<!-- Optional theme -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+		
+		<!-- Google Fonts -->
+		<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Pacifico" rel="stylesheet">
 
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
@@ -51,13 +54,15 @@
 							</div>
 						</div>
 						<div class="col-md-5">
-							<iframe width="420" height="315" src="https://www.youtube.com/embed/BKSoi96X6fA">
->
-							</iframe>
+							<div class="iframe-div">
+								<iframe width="420" height="315" src="https://www.youtube.com/embed/BKSoi96X6fA">
+								</iframe>
+								<h3 class="poloroid-text">- Basics of Quidditch -</h3>
+							</div>
 						</div>
 					</div>
 					<div class="row">
-						<div>
+						<div class="part-title">
 							<h3>Positions</h3>
 						</div>
 					</div>
@@ -195,16 +200,30 @@
 					</div>
 					<div class="row">
 						<div class="col-lg-12">
-							<div class="panel basic-panel FAQ">
-								<h2>FAQs</h2>
-								<h3>How does the snitch work?​​​​</h3>
-								 	<p>The snitch is a 3rd party player that has no affiliation with either team playing. The snitch is released after 17 minutes of game play and waits for seekers to be released at 18 minutes. The snitch does not have a broom and can push, throw, tackle, etc. any seeker and can use both hands to do so. The snitch has a tennis ball in a pouch attached to the back of his/her shorts and tries to keep the seekers from catching the tennis ball. </p>
-								​
-								<h3>If you score in different hoops does it count as different points?</h3>
-								 	<p>Nope! Although the three hoops on each end of the pitch are of varying heights, you only get 10 points for scoring regardless of which hoop you score through. You can score behind or in front of the hoops and scorers are allowed to either throw the ball or just stick their hand through the hoop. </p>
-								​
-								<h3>Do you actually fly?</h3>
-									<p>Unfortunately no, but that certainly doesn't keep us from thinking we can.</p>
+							<div class="row">
+								<div class="part-title">
+									<h2>FAQs</h2>
+								</div>
+							</div>
+							<div class="row">
+								<div class="panel basic-panel FAQ">
+									<div class="panel-body">
+									<div class="col-md-7">
+										<h3>How does the snitch work?​​​​</h3>
+										 	<p>The snitch is a 3rd party player that has no affiliation with either team playing. The snitch is released after 17 minutes of game play and waits for seekers to be released at 18 minutes. The snitch does not have a broom and can push, throw, tackle, etc. any seeker and can use both hands to do so. The snitch has a tennis ball in a pouch attached to the back of his/her shorts and tries to keep the seekers from catching the tennis ball. </p>
+										​
+										<h3>If you score in different hoops does it count as different points?</h3>
+										 	<p>Nope! Although the three hoops on each end of the pitch are of varying heights, you only get 10 points for scoring regardless of which hoop you score through. You can score behind or in front of the hoops and scorers are allowed to either throw the ball or just stick their hand through the hoop. </p>
+										​
+										<h3>Do you actually fly?</h3>
+											<p>Unfortunately no, but that certainly doesn't keep us from thinking we can.</p>
+									</div>
+
+									<div class="col-md-5">
+										<img src="assets/images/augie.jpg" alt="Augie_Monroe" class="fly-img img-right" id="fly-img">
+									</div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
